--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div id="symbol_map"></div>
 
 <script type="text/javascript">
-  var spec2 = "map_spec.json";
+  var spec2 = "./Week 9 Homework/map_spec.json";
   vegaEmbed('#symbol_map', spec2).then(function(result) {
   }).catch(console.error);
 </script>
