--- a/Week10Homework/index.html
+++ b/Week10Homework/index.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="utf-8" />
+  <title>Week 10 Homework</title>
   <script src="https://cdn.jsdelivr.net/npm/vega@5.25.0"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.17.0"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.24.0"></script>
-  
-  
-  <!-- CSS file -->
-  <link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
-  
+  <style>
+    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; margin: 20px; }
+    h2 { margin: 16px 0 8px; }
+    .vis { margin-bottom: 28px; }
+    .err { color:#b00020; white-space:pre-wrap; border:1px solid #f2b8b5; background:#fff4f4; padding:10px; border-radius:6px; display:none; }
+  </style>
 </head>
 <body>
-  
-<div id="symbol_map"></div>
+  <h2>Train Stations Map</h2>
+  <div id="symbol_map" class="vis"></div>
+  <div id="err1" class="err"></div>
 
-<script type="text/javascript">
-  var spec2 = "./map_spec.json";
-  vegaEmbed('#symbol_map', spec2).then(function(result) {
-  }).catch(console.error);
+  <h2>Restaurants Map</h2>
+  <div id="restaurant_map" class="vis"></div>
+  <div id="err2" class="err"></div>
 
-<div id="restaurant_map"></div>
+  <script>
+    vegaEmbed('#symbol_map', './map_spec.json', {actions:false})
+      .catch(err => { const e=document.querySelector('#err1'); e.style.display='block'; e.textContent = err; });
 
-  <script type="text/javascript">
-    vegaEmbed('#restaurant_map', './restaurant_pricemap.json')
-      .then(result => console.log("Restaurant price map loaded"))
-      .catch(console.error);
+    vegaEmbed('#restaurant_map', './restaurant_pricemap.json', {actions:false})
+      .catch(err => { const e=document.querySelector('#err2'); e.style.display='block'; e.textContent = err; });
   </script>
-
 </body>
 </html>
