--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -10,7 +10,7 @@
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.24.0"></script>
 
   <!-- External CSS -->
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="css/styles.css" />
 
   <style>
     .story { max-width: 900px; line-height: 1.6; color: #333; margin: 10px auto 22px; }
