--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -121,15 +121,15 @@
   <div id="restaurant_map" class="vis vis--controls-tight"></div>
  <div class="story story--side">
   <p>
-    Restaurant locations cluster strongly in the <strong>CBD</strong>, with additional concentrations in inner suburbs such as <strong>Southbank</strong>, <strong>Carlton</strong>, and <strong>Fitzroy</strong>. This spatial pattern highlights how Melbourne’s hospitality scene aligns with areas of high pedestrian activity, cultural attractions, and commercial density.
+    Restaurant locations cluster strongly in the CBD, with additional concentrations in inner suburbs such as Southbank, Carlton, and Fitzroy. This spatial pattern highlights how Melbourne’s hospitality scene aligns with areas of high pedestrian activity, cultural attractions, and commercial density.
   </p>
 
   <p>
-    Filtering by <strong>price category</strong> shows distinct spatial segregation. Affordable and mid-range restaurants (<strong>$</strong> and <strong>$$–$$$</strong>) are distributed broadly along the train corridors and local activity centres, providing accessibility to a wide population. In contrast, premium venues (<strong>$$$$</strong>) are heavily concentrated within the central grid and inner-east suburbs, reflecting higher median incomes, strong tourism flows, and proximity to business districts.
+    Filtering by price category shows distinct spatial segregation. Affordable and mid-range restaurants (<strong>$</strong> and <strong>$$–$$$</strong>) are distributed broadly along the train corridors and local activity centres, providing accessibility to a wide population. In contrast, premium venues (<strong>$$$$</strong>) are heavily concentrated within the central grid and inner-east suburbs, reflecting higher median incomes, strong tourism flows, and proximity to business districts.
   </p>
 
   <p>
-    The clustering pattern also corresponds with <strong>transport accessibility</strong>: almost all top-rated restaurants fall within short walking distance of railway stations or tram lines. This indicates that mobility infrastructure not only shapes commuting patterns but also influences where high-value leisure and dining activities occur across metropolitan Melbourne.
+    The clustering pattern also corresponds with transport accessibility: almost all top-rated restaurants fall within short walking distance of railway stations or tram lines. This indicates that mobility infrastructure not only shapes commuting patterns but also influences where high-value leisure and dining activities occur across metropolitan Melbourne.
   </p>
 </div>
 </div>
@@ -153,9 +153,9 @@
           <li><strong>Flagstaff</strong>, while having fewer immediate restaurants, serves the legal and business district</li>
         </ul>
       
-        <p><strong>Key Insight:</strong> Despite inner-northern suburbs like <strong>Carlton</strong> and <strong>Fitzroy</strong> having no local heavy-rail stations, they remain well-connected to top dining options via <strong>Melbourne Central</strong> and <strong>Parliament</strong> stations, demonstrating the loop's extended reach beyond the immediate CBD boundaries.</p>
+        <p><strong>Key Insight:</strong> Despite inner-northern suburbs like Carlton and Fitzroy having no local heavy-rail stations, they remain well-connected to top dining options via Melbourne Central and Parliament stations, demonstrating the loop's extended reach beyond the immediate CBD boundaries.</p>
 
-        <p>The clustering pattern shows that no single station dominates restaurant distribution, highlighting the loop's success in providing <strong>equitable access</strong> to Melbourne's culinary offerings across different city precincts.</p>
+        <p>The clustering pattern shows that no single station dominates restaurant distribution, highlighting the loop's success in providing equitable access to Melbourne's culinary offerings across different city precincts.</p>
 
   </div>
 </section>
@@ -166,28 +166,28 @@
     <div id="errscatter" class="err"></div>
    <section class="story">
   <p>
-    This scatterplot explores the relationship between <strong>annual passenger volumes</strong> 
-    and the <strong>number of nearby Top 500 restaurants</strong> for each train station across metropolitan Melbourne.
+    This scatterplot explores the relationship between annual passenger volumes
+    and the number of nearby Top 500 restaurants for each train station across metropolitan Melbourne.
   </p>
 
   <p>
-    When viewing <strong>all stations</strong>, the pattern is heavily influenced by the 
-    <strong>City Loop</strong> — particularly <em>Flinders Street</em>, <em>Southern Cross</em>, and 
+    When viewing all stations, the pattern is heavily influenced by the 
+    City Loop — particularly <em>Flinders Street</em>, <em>Southern Cross</em>, and 
     <em>Melbourne Central</em> — which attract exceptionally high passenger numbers and large restaurant clusters. 
     These central hubs dominate the scale and create an apparent strong positive relationship between restaurant density 
     and rail usage.
   </p>
 
   <p>
-    However, when <strong>City Loop stations are excluded</strong>, the relationship becomes much weaker. 
+    However, when City Loop stations are excluded, the relationship becomes much weaker. 
     Suburban stations such as <em>South Yarra</em>, <em>Box Hill</em>, and <em>Richmond</em> show moderate restaurant 
     concentrations despite varying passenger volumes, suggesting that local factors — like commercial zoning, nearby activity 
     centres, and demographics — play a more significant role than passenger traffic alone.
   </p>
 
   <p>
-    Overall, the comparison highlights how the <strong>City Loop amplifies the visibility</strong> of Melbourne’s core 
-    dining and transport activity, while suburban areas demonstrate <strong>more diverse, locally driven patterns</strong> 
+    Overall, the comparison highlights how the City Loop amplifies the visibility of Melbourne’s core 
+    dining and transport activity, while suburban areas demonstrate more diverse, locally driven patterns
     of restaurant clustering.
   </p>
 </section>
